@@ -1,0 +1,9 @@
+<Root>
+  <popups>
+    <popup name="button3">
+      <menuitem name="Properties Item" verb="PropertiesVerb" _label="_Preferences" pixtype="stock" pixname="gtk-properties" />
+      <menuitem name="Help Item" verb="HelpVerb" _label="_Help" pixtype="stock" pixname="gtk-help"/>
+      <menuitem name="About Item" verb="AboutVerb" _label="_About" pixtype="stock" pixname="gtk-about"/>
+    </popup>
+  </popups>
+</Root>
